Sculpt mode dimension changes don't Undo #38427

Closed
opened 2014-02-01 00:25:58 +01:00 by Tom Cloney · 7 comments

Windows 8.1
NVIDIA Quadro FX 570
Broken: Blender 2.69.0 r60995

  1. In Object mode, add a mesh cube. Use the SubSurf modifier in Simple mode to give it some detail
    (this isn't directly involved in the problem, but makes it easier to see).

  2. Switch from Object mode to Sculpt mode. Note the dimensions of the cube.

  3. Use any tool to add some material to the mesh, using a single stroke. The dimension
    corresponding to the face you added to will increase to reflect the added material.

  4. Use Ctrl-Z to undo the stroke. The dimension doesn't change back.

When you go back to Object mode, the inflated dimension remains, which messes
things up if you later rely on the original dimension. In other words, the size listed
in the dimension panel no longer represents the actual size of the object.

By contrast, this isn't the way changes in Edit mode work. If you modify the vertices
of a mesh and then Undo, the dimensions change to reflect the Undo. Since Sculpt
mode is basically a wrapper for the same sorts of things you might do in Edit mode,
its Undo behavior should be the same (I only mention this to head off a specious
argument that this behavior is somehow a feature).

Workaround: When you return to Object mode, you can use Ctrl-Z there to Undo the
effects of the entire Sculpt session. It would be better to fix Sculpt, though, as the
current situation makes it easy to introduce dimensional discrepancies without being
aware of it.
SculptUndoBug.blend

Windows 8.1 NVIDIA Quadro FX 570 Broken: Blender 2.69.0 r60995 1) In Object mode, add a mesh cube. Use the SubSurf modifier in Simple mode to give it some detail (this isn't directly involved in the problem, but makes it easier to see). 2) Switch from Object mode to Sculpt mode. Note the dimensions of the cube. 3) Use any tool to add some material to the mesh, using a single stroke. The dimension corresponding to the face you added to will increase to reflect the added material. 4) Use Ctrl-Z to undo the stroke. **The dimension doesn't change back.** When you go back to Object mode, the inflated dimension remains, which messes things up if you later rely on the original dimension. In other words, the size listed in the dimension panel no longer represents the actual size of the object. By contrast, this isn't the way changes in Edit mode work. If you modify the vertices of a mesh and then Undo, the dimensions change to reflect the Undo. Since Sculpt mode is basically a wrapper for the same sorts of things you might do in Edit mode, its Undo behavior should be the same (I only mention this to head off a specious argument that this behavior is somehow a feature). Workaround: When you return to Object mode, you can use Ctrl-Z there to Undo the effects of the entire Sculpt session. It would be better to fix Sculpt, though, as the current situation makes it easy to introduce dimensional discrepancies without being aware of it. [SculptUndoBug.blend](https://archive.blender.org/developer/F75737/SculptUndoBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tex

Added subscriber: @tex
Sergey Sharybin self-assigned this 2014-02-03 13:17:37 +01:00

This is rather limitation of undo stack, will look into some possible solution which wouldn't slow down things.

This is rather limitation of undo stack, will look into some possible solution which wouldn't slow down things.

This issue was referenced by blender/blender-addons-contrib@30b5aef678

This issue was referenced by blender/blender-addons-contrib@30b5aef6789a2cf39020151b00410bd1d8f1c3d7

This issue was referenced by 30b5aef678

This issue was referenced by 30b5aef6789a2cf39020151b00410bd1d8f1c3d7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 30b5aef678.

Closed by commit 30b5aef678.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38427
No description provided.