Fix T38427: Sculpt mode dimension changes don't Undo